# magic-lamp-everywhere

./: BUG_FIX_JOURNEY.md  CMakeLists.txt  README.md  common.h  genieopen.cpp  genieopen.h  genieopen.kcfg  genieopen_config.cpp  genieopen_config.h  genieopen_config.json  genieopen_config.ui  genieopenconfig.kcfgc  install.sh  metadata.json  plugin.cpp
